# Splitdetection2

./: CMakeLists.txt  README.md  capImg.py
data/: read.txt
results/: yolov5_320x300.txt  yolov5_723.txt  yolov5_out.txt  yolov5_xuewei_960_720.txt
src/: CMakeLists.txt  adas_em.cpp  adas_em.h  main.cpp  topic.h
src/abdObj/: CMakeLists.txt  FrameDiff.cpp  FrameDiff.h  IOUT.cpp  IOUT.h  ImageAnalysis.cpp  ImageAnalysis.hpp  SplitIF.cpp  SplitIF.hpp  UA-DETRAC.h  log.h
